# manimax

./: .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  STATUS.md  conductor.json  deny.toml  mkdocs.yml  pyproject.toml
.agents/skills/code-quality/: SKILL.md
.agents/skills/git-commit/: SKILL.md
.agents/skills/review-pr/: SKILL.md
.github/workflows/: ci.yml  docs.yml
crates/manim-rs-encode/: Cargo.toml
crates/manim-rs-encode/src/: lib.rs
crates/manim-rs-encode/tests/: encode_solid.rs
crates/manim-rs-eval/: Cargo.toml
crates/manim-rs-eval/src/: bezpath.rs  easing.rs  evaluator.rs  lerp.rs  lib.rs  state.rs  tex.rs  text.rs  tracks.rs
crates/manim-rs-ir/: Cargo.toml
crates/manim-rs-ir/src/: lib.rs
crates/manim-rs-py/: Cargo.toml
crates/manim-rs-py/src/: lib.rs
crates/manim-rs-raster/: Cargo.toml
crates/manim-rs-raster/examples/: clear_png.rs  stroke_square_png.rs
crates/manim-rs-raster/src/: camera.rs  lib.rs  pipe_bundle.rs  render_object.rs  tessellator.rs
crates/manim-rs-raster/src/pipelines/: mod.rs  path_fill.rs  path_stroke.rs
crates/manim-rs-raster/src/shaders/: path_fill.wgsl  path_stroke.wgsl
crates/manim-rs-raster/tests/: bezpath.rs  edge_cases.rs  expand_stroke.rs  fill.rs  msaa.rs  multi_object.rs  snapshot.rs  stroke_aa.rs  tapered_stroke.rs  tessellator_sample.rs  transforms.rs
crates/manim-rs-runtime/: Cargo.toml
crates/manim-rs-runtime/examples/: render_square_mp4.rs
crates/manim-rs-runtime/src/: cache.rs  lib.rs
crates/manim-rs-runtime/tests/: cache_behaviour.rs  end_to_end.rs  tex_render.rs
crates/manim-rs-runtime/tests/common/: mod.rs
crates/manim-rs-tex/: Cargo.toml
crates/manim-rs-tex/src/: adapter.rs  error.rs  lib.rs  pipeline.rs
crates/manim-rs-text/: Cargo.toml
crates/manim-rs-text/src/: cosmic.rs  font.rs  glyph.rs  lib.rs
docs/: architecture.md  future-directions.md  gotchas.md  ir-schema.md  performance.md  tex-coverage.md
docs/decisions/: 0001-ir-wire-format-json-string.md  0002-internally-tagged-unions.md  0003-match-manimgl-over-correct.md  0004-slice-c-decisions.md  0005-plain-ir-compiled-evaluator.md  0006-slice-d-decisions.md  0008-slice-e-decisions.md  0009-remove-pixel-cache.md  0010-in-process-encoder.md  0012-text-via-cosmic-text-swash.md  README.md
docs/porting-notes/: README.md  eval.md  ffmpeg.md  fill.md  geometry.md  rate-functions.md  scene-discovery.md  stroke.md  tex.md  text.md  transforms.md
docs/public/: changelog.md  examples.md  getting-started.md  index.md  reference.md  roadmap.md
docs/public/assets/: theme.css
docs/public/concepts/: architecture.md  index.md  ir-schema.md
docs/public/contributing/: gotchas.md  index.md  performance.md  porting-from-manimgl.md
docs/public/design/: ci-lavapipe.md  encoder-hardware.md  encoder-in-process.md  index.md  internally-tagged-unions.md  local-chunked-rendering.md  manimgl-fidelity.md  pixel-cache.md  slice-c-decisions.md  slice-d-decisions.md  slice-e-decisions.md  text-stack.md  wire-format.md
docs/slices/: slice-b.md  slice-c.md  slice-d.md  slice-e.md
examples/: __init__.py  tex_scene.py  text_scene.py
python/manim_rs/: __init__.py  __main__.py  _rust.pyi  api.py  cli.py  discovery.py  ir.py  scene.py
python/manim_rs/animate/: __init__.py  transforms.py
python/manim_rs/cli/: __init__.py  _shared.py  frame.py  render.py
python/manim_rs/ir/: __init__.py  _primitives.py  easing.py  objects.py  ops.py  paint.py  scene.py  tracks.py
python/manim_rs/objects/: __init__.py  _coerce.py  geometry.py  tex.py  text.py
scripts/: perf_probe.py  setup.sh
tests/python/: complex_scene.py  conftest.py  integration_scene.py  showcase_scene.py  test_cache_integration.py  test_cli.py  test_e2e_text_tex.py  test_eval_at.py  test_import.py  test_integration_scene.py  test_ir_roundtrip.py  test_render_to_mp4.py  test_scene_discovery.py  test_scene_recording.py  test_stroke_variants.py  test_tex.py  test_text.py  tex_corpus.py
