[workspace]
resolver = "3"
members = [
    "crates/manim-rs-ir",
    "crates/manim-rs-eval",
    "crates/manim-rs-raster",
    "crates/manim-rs-encode",
    "crates/manim-rs-runtime",
    "crates/manim-rs-py",
    "crates/manim-rs-text",
    "crates/manim-rs-tex",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/chcardoz/manimax"

[workspace.dependencies]
# Internal crates
manim-rs-ir = { path = "crates/manim-rs-ir" }
manim-rs-eval = { path = "crates/manim-rs-eval" }
manim-rs-raster = { path = "crates/manim-rs-raster" }
manim-rs-encode = { path = "crates/manim-rs-encode" }
manim-rs-runtime = { path = "crates/manim-rs-runtime" }
manim-rs-text = { path = "crates/manim-rs-text" }
manim-rs-tex = { path = "crates/manim-rs-tex" }

# Text + glyph outlines (Slice E).
# swash: shaping + glyph outlines. kurbo: BezPath used everywhere as the
# geometry exchange type.
swash = "0.2"
kurbo = "0.11"

# RaTeX (KaTeX-equivalent pure-Rust math typesetting). Pinned to a SHA on
# `main` because the project doesn't publish to crates.io and v0.1.x is young
# (see ADR 0008). Bump deliberately and re-run the Tex coverage corpus.
ratex-katex-fonts = { git = "https://github.com/erweixin/RaTeX", rev = "74831536501c37b37f8bedfcd82046657fe06277" }
ratex-parser = { git = "https://github.com/erweixin/RaTeX", rev = "74831536501c37b37f8bedfcd82046657fe06277" }
ratex-layout = { git = "https://github.com/erweixin/RaTeX", rev = "74831536501c37b37f8bedfcd82046657fe06277" }
ratex-types = { git = "https://github.com/erweixin/RaTeX", rev = "74831536501c37b37f8bedfcd82046657fe06277" }

# IR / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Rendering
wgpu = "29"
lyon = "1"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }

# Python binding.
# `extension-module` deliberately omitted here: it disables linking to
# libpython and breaks `cargo test --workspace`. The `manim-rs-py` crate
# re-exposes it as its own feature, which `pyproject.toml`'s
# `[tool.maturin].features` turns on for the actual extension build.
# See pyo3 FAQ "I can't run `cargo test`" (PyO3 0.23-compatible workaround;
# the cleaner `PYO3_BUILD_EXTENSION_MODULE` env-var path is pyo3 ≥0.26).
pyo3 = { version = "0.23", features = ["abi3-py310"] }
pythonize = "0.23"

# Error handling
thiserror = "2"

# Async runtime — Slice B's sequential pipeline blocks on wgpu's async APIs
# without pulling in a full executor.
pollster = "0.4"

# PNG I/O for raster examples and eyeball tests.
png = "0.17"

# Hashing — blake3 for the render-side snapshot cache key.
blake3 = "1"

# Temp-file handling for atomic cache writes.
tempfile = "3"

# Per-stage instrumentation (perf.md N9). Spans live in eval/raster/encode/
# runtime; the subscriber that emits them lives in manim-rs-py and is
# wired up from Python via `_rust.install_trace_json(path)`.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dev]
# Speeds up iterative maturin develop cycles.
opt-level = 1
