[package]
name = "manim-rs-raster"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wgpu = { workspace = true }
lyon = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
thiserror = { workspace = true }
manim-rs-ir = { workspace = true }
manim-rs-eval = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
png = { workspace = true }
